# loglight

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  example_main.cpp
script/: build.sh
src/: CMakeLists.txt  loglightConfig.cmake.in
src/flie/: file.hpp
src/interface/: loglight.h
src/logger/: console_logger.cpp  console_logger.h  logger.h
